--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ivaxo - Premium Content Platform</title>
-    <script src="https://js.stripe.com/v3/"></script>
+
+    <link rel="preload" href="/image1.png" as="image" />
+    <link rel="preconnect" href="https://js.stripe.com" />
+    <link rel="dns-prefetch" href="https://js.stripe.com" />
+
+    <script src="https://js.stripe.com/v3/" async></script>
   </head>
   <body>
     <div id="root"></div>
